--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html xml:lang="es">
   <head>
     <title>Sumador</title>
@@ -16,4 +16,18 @@
 
     <script type="module" src="./src/presenter.js"></script>
   </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Saludador</title>
+</head>
+<body>
+  
+  <head>Hola!</head>
+
+</body>
 </html>
