Saludo con Nombre

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <body>
     <h1>Bot Que Saluda</h1>
     <form id="saludar-form">
-      
-      <input type="sumbit" valu="Saludar" id="saludar-boton">
+      <label for="Nombre">¿Cuál es tu nombre?</label>
+      <input type="text" id="nombre">
+
+      <button type="sumbit" id="saludar-boton"></button>
 
     </form>
 
