Error con nombre solucionado

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <h1>Bot Que Saluda</h1>
     <form id="saludar-form">
       <label for="Nombre">¿Cuál es tu nombre?</label>
-      <input type="text" id="nombre">
+      <input type="text" id="nombre-input">
 
-      <button type="sumbit" id="saludar-boton"></button>
 
     </form>
 
