Saludo por hora

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <form id="saludar-form">
       <label for="Nombre">¿Cuál es tu nombre?</label>
       <input type="text" id="nombre-input">
-
-
+      <br>
+      <button type="submit" id="saludar-boton">Saludar</button>
     </form>
-
+    
     <div id="resultado-div"></div>
     
     <script type="module" src="./src/presenter.js"></script>
