Implementando saludo en ingles 1 de 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   </head>
   <body>
     <h1>Bot Que Saluda</h1>
+
+    <label>Selecciona una opción / Select an option </label>
+    <select id="idoma" name="opciones">
+      <option value="ES">Español</option>
+      <option value="EN">English</option>
+    </select>
+
     <form id="saludar-form">
       <label for="Nombre">¿Cuál es tu nombre?</label>
       <input type="text" id="nombre-input">
